--- a/pom.xml
+++ b/pom.xml
@@ -109,13 +109,13 @@
         <dependency>
             <groupId>io.lumine</groupId>
             <artifactId>Mythiclib-dist</artifactId>
-            <version>1.3.3</version>
+            <version>1.4.2-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.Indyuce</groupId>
-            <artifactId>MMOItems</artifactId>
-            <version>6.7.4</version>
+            <artifactId>MMOItems-API</artifactId>
+            <version>6.8.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
